feature/TPIN-032: assign student to driver
